# photo_indexer

./: .gitignore  Cargo.toml  Makefile.toml  README.md  config.toml  go.sh  index.html  input.css  lint.toml  log.txt  package.json  tailwind.sh  todo.md
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: manifest.json
src/: app.rs  doc_links.rs  file_lister.rs  gallery.rs  homepage.rs  image_gallery.rs  index_context.rs  indexer.rs  lexer.rs  lib.rs  main.rs  main_copy.rs  model.rs  settings.rs  sidebar.rs
src/component/: image_gallery.rs  mod.rs
src/component/file_lister/: mod.rs  view.rs
src/component/settings/: button.rs  mod.rs  panel.rs  pannel.rs
src/file_lister/: lister.rs  mod.rs  view.rs
src/pages/: about.rs  mod.rs  search.rs
src/pages/search/: mod.rs  view.rs
src/settings/: button.rs  mod.rs  pannel.rs
src/util/: mod.rs
style/: output.css
